test/lexer/error/err_02_number_overflow.pl0
program overflow;
const MAX = 999999999999999999999999999999;  // Way larger than INT_MAX
begin
end
